Update and rename Rennes.md to 2012-03-01-talk-1.md

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -2,7 +2,7 @@
 title: "Goodness-of-Fit, Change-ponits, and related problems"
 collection: talks
 type: "Talk"
-permalink: [/talks/Rennes](https://ensai.fr/en/event/gofcp-2022/)
+permalink: [/talks/2012-03-01-talk-1](https://ensai.fr/en/event/gofcp-2022/)
 venue: "ENSAI"
 date: 2-4 September 2022
 location: "Rennes, France"
